force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/PMC_DH_Store_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>PMC DH Store Configuration</label>
    <pluralLabel>PMC DH Store Configurations</pluralLabel>
</CustomObject>