force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Batch_Size__c</fullName>
    <description>Batch Size to process Product Enablement and Restriction</description>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>