force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_Country__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Country__c</fullName>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>