force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_DefaultUOMForCountry__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_DefaultUOMForCountry__c</fullName>
    <label>Default UOM For Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>