force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_Description__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Description__c</fullName>
    <description>Purpose of the store configuration</description>
    <inlineHelpText>Store Configuration Description</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>