force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_FieldsAPIName__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_FieldsAPIName__c</fullName>
    <label>Field API Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>