force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_PageUrl__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_PageUrl__c</fullName>
    <label>PageUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>