force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_Prepended_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Prepended_Image_Url__c</fullName>
    <label>Prepended Image Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>