force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_Product_Max_Result__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Product_Max_Result__c</fullName>
    <label>Product Max Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>