force-app/main/default/objects/PMC_DH_Store_Configuration__mdt/fields/PMC_DH_QuoteInactiveExtendedDays__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_QuoteInactiveExtendedDays__c</fullName>
    <label>Quote Inactive Extended Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>